--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,4 +1,14 @@
 <h2>Create an Author</h2>
+
+<% if flash[:my_errors] %>
+  <ul>
+    <% flash[:my_errors].each do |error| %>
+      <li><%= error %></li>
+    <% end%>
+  </ul>
+<% end%>
+
+
 <%= form_tag authors_path, method: "post" do %>
   <div class="field">
     <%= label_tag "name", "Name" %>
